# quaero

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/quaero/: __main__.py  cli.py
src/quaero/core/: __init__.py  config.py  database.py  embedding.py  ingest.py  models.py  query.py  utils.py
src/quaero/core/intelligence/: __init__.py  base.py
src/quaero/core/intelligence/providers/: __init__.py  ollama.py
